# watertemplate

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
requirements/: requirements-linux.txt  requirements-macos.txt
